Created page with content and styling

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap</title>
@@ -9,10 +10,10 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default" id="top-bar">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Ubermelon</a>
+				<a class="navbar-brand" href="#" id="brand">Ubermelon</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="left-nav">
@@ -30,6 +31,73 @@
 			</div>
 		</div>
 	</nav>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-offset-2 col-xs-8">
+				<img src="melon.jpg" class="img-responsive">
+				<br><br>
+				We deliver only the highest quality domestic and exotic melons from local, independent farmers from around the world. Our melons are delivered quickly with the greatest care. We guarantee every order, every time.
+			</div>
+		</div>
+	</div>
+<br><br>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-4">
+				<p class="text-center"><span class="glyphicon glyphicon-star"></span>
+				<strong>Award Winning</strong></p>
+				Don't take our word for it. See all the awards our melons have earned.
+			</div>
+			<div class="col-xs-4">
+				<p class="text-center"><span class="glyphicon glyphicon-globe"></span>
+				<strong>Huge Selection</strong></p>
+				We import melons from all over the world, ensuring we have every melon you could possibly desire.
+			</div>
+			<div class="col-xs-4">
+				<p class="text-center"><span class="glyphicon glyphicon-certificate"></span>
+				<strong>Certified Sustainable</strong></p>
+				Our melons are sourced only from sustainable, organic local farmers. These are the healthiest melons you'll ever eat.
+			</div>
+		</div>
+	</div>
+<br><br>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-offset-1 col-xs-10 col-xs-offset-1">
+				
+				<table class="table table-striped">
+					<tr>
+						<th>Melon</th>
+						<th>Price</th>
+						<th>Color</th>
+						<th>Country</th>
+					</tr>
+					<!-- <tbody> -->
+						<tr>
+							<td>Canteloupe</td>
+							<td>$4.99/lb</td>
+							<td>Tan</td>
+							<td>Italy</td>					
+						</tr>
+						<tr>
+							<td>Honeydew</td>
+							<td>$3.99/lb</td>
+							<td>White/Green</td>
+							<td>France/Algeria</td>					
+						</tr>
+						<tr>
+							<td>Casaba</td>
+							<td>$7.99/lb</td>
+							<td>Yellow</td>
+							<td>Turkey</td>					
+						</tr>
+					<!-- </tbody> -->
+				</table>
+			</div>
+		</div>
+	</div>
+
 <!-- Code goes here. -->
 
 
